--- a/VSTestSample.Tests/VSTestSample.Tests.csproj
+++ b/VSTestSample.Tests/VSTestSample.Tests.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <RootNamespace>VSTestSample.Tests</RootNamespace>
-
+        <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
