--- a/VSTestSample/VSTestSample.csproj
+++ b/VSTestSample/VSTestSample.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>VSTestSample</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
